--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Document</title>
@@ -16,31 +16,31 @@
         <section class="glass">
             <div class="dashboard">
                 <div class="user">
-                    <img src="/img/avatar.jpg" alt="">
+                    <img src="img/avatar.jpg" alt="">
                     <h3>Raoul Shah</h3>
                     <p>Pro Member</p>
                 </div>
                 <div class="links">
                     <div class="link">
-                        <img src="/img/twitch.png" alt="">
+                        <img src="img/twitch.png" alt="">
                         <h2>Streams</h2>
                     </div>
                     <div class="link">
-                        <img src="/img/steam.png" alt="">
+                        <img src="img/steam.png" alt="">
                         <h2>Games</h2>
                     </div>
                     <div class="link">
-                        <img src="/img/upcoming.png" alt="">
+                        <img src="img/upcoming.png" alt="">
                         <h2>New</h2>
                     </div>
                     <div class="link">
-                        <img src="/img/library.png" alt="">
+                        <img src="img/library.png" alt="">
                         <h2>Library</h2>
                     </div>
                 </div>
                 <div class="pro">
                     <h2>Join pro for free games</h2>
-                    <img src="/img/controller.png" alt="">
+                    <img src="img/controller.png" alt="">
                 </div>
             </div>
             <div class="games">
@@ -50,7 +50,7 @@
                 </div>
                 <div class="cards">
                     <div class="card">
-                        <img src="/img/assassins.png" alt="">
+                        <img src="img/assassins.png" alt="">
                         <div class="card-info">
                             <h2>Assassins Creed Valhalla</h2>
                             <p>PS5 Version</p>
@@ -59,7 +59,7 @@
                         <h2 class="percentage">60%</h2>
                     </div>
                     <div class="card">
-                        <img src="/img/sackboy.png" alt="">
+                        <img src="img/sackboy.png" alt="">
                         <div class="card-info">
                             <h2>Sackboy A Great Adventure</h2>
                             <p>PS5 Version</p>
@@ -68,7 +68,7 @@
                         <h2 class="percentage">60%</h2>
                     </div>
                     <div class="card">
-                        <img src="/img/spiderman.png" alt="">
+                        <img src="img/spiderman.png" alt="">
                         <div class="card-info">
                             <h2>Spiderman Miles Morales</h2>
                             <p>PS5 Version</p>
